# MNIST-WITH-CPP

./: Backpropagation.cpp  CMakeLists.txt  Neuron.cpp  activation_functions.cpp  backpropagation.cpp  loss_function.cpp  main.cpp  printData.cpp  shuffle.cpp  sumProbabilities.cpp  test_function.cpp
.cache/clangd/index/: Backpropagation.hpp.3EA0D99A10B3171D.idx  Neuron.cpp.615140125FA90268.idx  Neuron.cpp.7D27B177F2E359E8.idx  Neuron.hpp.476DE3BE627EF2F8.idx  Neuron.hpp.C78B963203684A06.idx  activation_functions.cpp.78AD765353265FCE.idx  activation_functions.cpp.8BF56474979F289A.idx  backpropagation.cpp.60658DD2D2B610FF.idx  loss_function.cpp.357D9A8922CC73AB.idx  loss_function.cpp.67677D8EE0F1F734.idx  loss_functions.hpp.0011A14244D9B722.idx  loss_functions.hpp.5A90A9A421D0131A.idx  main.cpp.612D1406DBAB6701.idx  main.cpp.643BD69B672318BE.idx  printData.cpp.D225581BD0F3E311.idx  read_plot.hpp.0ED6CCF790073858.idx  read_plot.hpp.A36D809876CD99D4.idx  shuffle.cpp.82ECF8609D1392C9.idx  shuffle.cpp.B1A5711DECF0D0AE.idx  sumProbabilities.cpp.5469400B681510DE.idx  sumProbabilities.cpp.A72A306AE9FE5DCE.idx
include/: Backpropagation.hpp  Neuron.hpp  backpropagation.hpp  loss_functions.hpp  read_plot.hpp
